fixed overflow along x-axis on mobile screens

--- a/src/assets/scss/_styles.scss
+++ b/src/assets/scss/_styles.scss
@@ -22,6 +22,8 @@
   --dark-pink: #7d003c;
 
   --black-gradient: linear-gradient(to right, #232323, #000000);
+  --white-gradient: radial-gradient(circle at center, #F7F7F7dd 0%, #E7E7E799 70%, transparent);
+  --purple-gradient: linear-gradient(-90deg, var(--dark-purple) 0%, #231d2e99 100%);
   --green-pink-gradient: linear-gradient(90.13deg, var(--green) 1.9%, #bf61ff 97.5%);
 }
 
